apps/mediawiki/mediawiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki
spec:
  selector:
    app: mediawiki
  ports:
  - port: 80
    targetPort: mediawiki
