apps/mediawiki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: wiki.roboticsoutreach.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mediawiki
            port:
              number: 80
  tls:
  - hosts:
    - wiki.roboticsoutreach.org
    secretName: wiki.roboticsoutreach.org-tls
